--- a/android/proguard.cfg
+++ b/android/proguard.cfg
@@ -1,7 +1,16 @@
+# DEBUG commented
+
 -optimizationpasses 5
+#-dontobfuscate
+#-dontoptimize
+
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
--dontpreverify
+#-dontpreverify
+#-dontshrink
+
+-renamesourcefileattribute SourceFile
+-keepattributes SourceFile,LineNumberTable
 -verbose
 -optimizations !code/simplification/arithmetic,!field/*,!class/merging/*
 
@@ -13,6 +22,8 @@
 -keep public class * extends android.app.backup.BackupAgentHelper
 -keep public class * extends android.preference.Preference
 -keep public class com.android.vending.licensing.ILicensingService
+
+-keepattributes *Annotation*
 
 -keepclasseswithmembernames class * {
     native <methods>;
@@ -38,3 +49,72 @@
 -keep class * implements android.os.Parcelable {
   public static final android.os.Parcelable$Creator *;
 }
+
+-dontwarn scala.concurrent.**
+-dontwarn scala.reflect.**
+-dontwarn scala.sys.process.package$
+
+-dontwarn **$$anonfun$*
+-dontwarn scala.collection.immutable.RedBlack$Empty
+-dontwarn scala.tools.**,plugintemplate.**
+
+-keepclasseswithmembers public class * {
+    public static void main(java.lang.String[]);
+}
+
+-keep class * implements org.xml.sax.EntityResolver
+
+-keepclassmembers class * {
+    ** MODULE$;
+}
+
+-keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
+    long eventCount;
+    int  workerCounts;
+    int  runControl;
+    scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode syncStack;
+    scala.concurrent.forkjoin.ForkJoinPool$WaitQueueNode spareStack;
+}
+
+-keepclassmembernames class scala.concurrent.forkjoin.ForkJoinWorkerThread {
+    int base;
+    int sp;
+    int runState;
+}
+
+-keepclassmembernames class scala.concurrent.forkjoin.ForkJoinTask {
+    int status;
+}
+
+-keepclassmembernames class scala.concurrent.forkjoin.LinkedTransferQueue {
+    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference head;
+    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference tail;
+    scala.concurrent.forkjoin.LinkedTransferQueue$PaddedAtomicReference cleanMe;
+}
+
+-allowaccessmodification
+-flattenpackagehierarchy
+
+-assumenosideeffects class android.util.Log {
+    public static *** d(...);
+    public static *** v(...);
+}
+
+-keep class com.google.protobuf.DescriptorProtos {
+	public ** *();
+}
+
+#-keep class dispatch.** {
+#    public scala.Function1 *();
+#    }
+#-keep class ** extends dispatch.Builder {
+#    public ** product();
+#}
+#-keep class org.apache.http.protocol.ImmutableHttpProcessor {
+#  public ** *();
+#}
+
+#-ignorewarnings
+
+-keep class com.readystatesoftware.** { *; }
+-keep interface com.readystatesoftware.** { *; }
